# web-scraping-agent

./: README.md  main.py  pyproject.toml  requirements.txt
src/controllers/: WebScrapSummarizerController.py
src/models/: simple_method.py
src/routes/: webScrapSummarizer.py
src/schemas/: index.py
src/utils/: auth.py  decorators.py  error_handling.py  helper.py  prompts.py  scraper.py  webhook.py
