[tool.poetry]
name = "repl_nix_WebScrapSummarizerAgent"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Authlib = "^1.2.1"
bs4 = "^0.0.1"
fastapi = "^0.98.0"
pydantic = "^1.10.9"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
uvicorn = "^0.22.0"
validators = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
